--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <label for="genislik">Boyut <input type="number" name="genislik" id="genislik" min="20" value="30"></label>
     <input type="color" name="renk" id="renk">
+    <button type="reset" id="reset">Sıfırla</button>
+    <button id="yazi">Yazi Ekle</button>
+    <strong id="yaziekleme"></strong>
+    
     <canvas id="canvas" height="768" width="1024" style="border: 1px solid black; display: block; margin: 50px auto;">
         
     </canvas>
